force-app/main/default/objects/Employee_Expense_Allocation__c/Employee_Expense_Allocation__c.object-meta.xml
<CustomObject>
    <label>Employee Expense Allocation</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Expense Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>