force-app/main/default/objects/Employee_Expense_Allocation__c/fields/Expense_Account__c.field-meta.xml
<CustomField>
    <fullName>Expense_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Account</label>
    <referenceTo>Expense_Account__c</referenceTo>
    <relationshipLabel>Employee Expense Allocations</relationshipLabel>
    <relationshipName>Employee_Expense_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>