force-app/main/default/objects/Employee_Expense_Allocation__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <required>flase</required>
    <type>Date</type>
</CustomField>